--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -25,6 +25,7 @@
   overflow: hidden
   margin: 0
   line-height: 24px
+  height: 24px
   .title
     margin: 0
   .domain
